# cs-690l-mm-align

./: .gitignore  README.md  pyproject.toml  requirements-colab.txt
app/: common.py  dashboard.py
app/pages/: 0_Story_Map.py  1_Overview.py  2_Examples.py  3_Preferences.py  4_Failures.py  5_Comparison.py  6_Dependence.py  7_Training.py  8_Evidence.py
configs/: main.yaml  pilot.yaml  pilot_full.yaml  pilot_t4.yaml  smoke.yaml
docs/: README.md  artifacts.md  dashboard.md  final_submission.md  project_overview.md  reproducibility.md
notebooks/colab/: README.md  pilot_workflow.ipynb
reports/: final_report.tex  final_results.md  final_video_story.md  milestone_report.tex  neurips_2026.sty  paired_case_counts.csv  representative_failure_cases.csv  statistical_summary.csv  statistical_summary.md
scripts/: colab_setup.sh  colab_smoke_run.sh  run_dashboard.sh
src/mm_align/: __init__.py  artifacts.py  cli.py  config.py
src/mm_align/data/: __init__.py  chartqa.py  common.py  hallusionbench.py  pope.py  preparation.py  rlaif_v.py
src/mm_align/eval/: __init__.py  dashboard_data.py  metrics.py  runner.py  statistical_report.py
src/mm_align/training/: __init__.py  collators.py  datasets.py  env.py  image_aware.py  modeling.py  runners.py
src/mm_align/utils/: images.py  io.py
tests/: test_collators.py  test_common.py  test_config.py  test_dashboard_data.py  test_eval_runner.py  test_hallusionbench.py  test_metrics.py  test_pope.py  test_prepare_data.py  test_statistical_report.py
